--- a/truyum-spring-boot/src/main/webapp/WEB-INF/views/common/header-with-cart.jspf
+++ b/truyum-spring-boot/src/main/webapp/WEB-INF/views/common/header-with-cart.jspf
@@ -9,6 +9,6 @@
 		
 	<div class="nav-links-div">
 		 <a href="menu-item-list-admin.html" class="menu-button">Menu</a> <a
-		href="menu-item-list-admin.html" class="cart-button">Cart</a>
+		href="cart" class="cart-button">Cart</a>
 	</div>
 </header>
