--- a/truyum-spring-boot/src/main/webapp/WEB-INF/views/common/taglibs-and-head.jspf
+++ b/truyum-spring-boot/src/main/webapp/WEB-INF/views/common/taglibs-and-head.jspf
@@ -12,6 +12,9 @@
 <%@ include file="../styles.css" %>
 
 </style>
+
+<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css"
+	rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TruYum Case Study</title>
