--- a/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
+++ b/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
@@ -150,6 +150,25 @@ a {
 	margin-right: auto;
 }
 
+
+
+.edit-menu-item-form{
+	width: 50%;
+	padding-left: 0;
+	padding-right: 0;
+	margin-left: auto;
+	margin-right: auto;	
+}
+
+.edit-form{
+	left:0;
+}
+
+
+.edit-form-name{
+	width: 40%;
+}
+
 .table-div {
 	width: 800;
 	padding-left: 0;
@@ -219,7 +238,7 @@ td {
 
 .form-edit-menu {
 	position: relative;
-	left: 200px;
+	left: 0;
 	right: 200px;
 	width: 1000px;
 	text-align: left;
