--- a/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
+++ b/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
@@ -3,10 +3,11 @@
 	padding: 0;
 }
 
-.container {
+.container-my {
 	width: 100%;
 	height: 100vh;
 	margin-left: 0;
+	margin-right: 0;
 }
 
 .header {
@@ -116,6 +117,11 @@ a {
 	width: 800px;
 }
 
+.added-message{
+	text-align: center;
+}
+
+
 .edit-status-heading{
 	
 	padding-left: 0;
@@ -162,11 +168,14 @@ a {
 
 .edit-form{
 	left:0;
+	width: 700px;
+	text-align: left;
 }
 
 
 .edit-form-name{
 	width: 40%;
+	
 }
 
 .table-div {
