--- a/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
+++ b/truyum-spring-boot/src/main/webapp/WEB-INF/views/styles.css
@@ -196,6 +196,10 @@ a {
 	font-size: unset;
 }
 
+.cart-footer-row{
+	font-weight: bold;
+}
+
 .save-button-edit {
   background-color: #315496;
   border: none;
